k8s-manifests/service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: demo-flask-app-service
  labels:
    app: demo-flask-app
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: demo-flask-app
  type: ClusterIP
