k8s-manifests/ingress.yaml
# Ingress resource for the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-flask-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: aws.digitxel.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-flask-app-service
            port:
              number: 80
